# aspen

./: Cargo.toml  Makefile
aspen/: Cargo.toml  build.rs
aspen-cli/: .gitignore  Cargo.toml  Example.aspen
aspen-cli/src/: main.rs  reporter.rs
aspen-cli/src/commands/: mod.rs
aspen-cli/src/commands/auth/: mod.rs
aspen-cli/src/commands/context/: mod.rs
aspen-cli/src/commands/live/: mod.rs
aspen-cli/src/commands/run/: mod.rs
aspen-cli/src/commands/server/: mod.rs
aspen-cli/src/platform/: .graphqlconfig  mod.rs  queries.graphql  schema.graphql
aspen-runtime/: Cargo.toml  build.rs  cbindgen.toml  test.c
aspen-runtime/src/: actor.rs  actor_address.rs  continuation.rs  cpus.rs  job.rs  lib.rs  mutex.rs  object.rs  object_ref.rs  pending_reply.rs  print.rs  reply.rs  runtime.rs  scheduler.rs  semaphore.rs  standalone.rs  threads.rs  user_land_exposable.rs  value.rs  worker.rs
aspen-runtime/src/worker/: q64.rs
aspen/src/: lib.rs  merge.rs
aspen/src/context/: context.rs
aspen/src/diagnostics/: diagnostic.rs  diagnostics.rs  mod.rs
aspen/src/emit/: emission_context.rs  emitter.rs  jit.rs  linker.rs  mod.rs  output.rs
aspen/src/generation/: compile.rs  emitted_module.rs  executable.rs  generator.rs  intrinsics.rs  jit.rs  mod.rs  object_file.rs  result.rs
aspen/src/semantics/: analyzer.rs  host.rs  mod.rs  module.rs
aspen/src/semantics/analyzers/: check_all_references_are_defined.rs  check_for_duplicate_exports.rs  check_for_failed_expression_type_inference.rs  check_for_failed_type_expression_type_inference.rs  check_for_failed_type_inference.rs  check_for_ununderstandable_messages.rs  check_only_class_types_in_rhs_of_instance.rs  find_declaration.rs  get_behaviours_of_object.rs  get_exported_declarations.rs  get_type_of_expression.rs  get_type_of_type_expression.rs  mod.rs
aspen/src/semantics/types/: behaviour.rs  mod.rs  trace.rs
aspen/src/source/: location.rs  mod.rs  range.rs  source.rs  uri.rs
aspen/src/syntax/: lexer.rs  mod.rs  navigator.rs  node.rs  parse_result.rs  parse_strategy.rs  parser.rs  token.rs  token_cursor.rs
