[package]
name = "aspen-cli"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[[bin]]
name = "aspen"
path = "src/main.rs"
bin-type = ["dylib"]

[dependencies]
aspen = { path = "../aspen" }
tokio = { version = "0.2.19", features = ["macros", "rt-threaded", "stream", "sync", "fs", "io-util", "io-std", "time"] }
ansi-colors = "0.3.0"
