[package]
name = "aspen-cli"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[[bin]]
name = "aspen"
path = "src/main.rs"

[dependencies]
aspen = { path = "../aspen" }
aspen-runtime = { path = "../aspen-runtime" }
tokio = { version = "0.2.19", features = ["macros", "rt-threaded", "stream", "sync", "fs", "io-util", "io-std", "time"] }
ansi-colors = "0.3.0"
clap = "2.33.0"
rustyline = "6.1.2"
lsp-server = "0.3"
lsp-types = "0.74"
serde = "1.0"
serde_json = "1.0"
flexi_logger = "0.15.2"
log = "0.4.8"
futures = "0.3.5"
