[package]
name = "aspen-runtime"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
name = "aspen_runtime"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
standalone = []

[dependencies]
threadpool = "1.8.1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
libc = "0.2.70"
