[package]
name = "aspen-runtime"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
name = "aspenrt"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
crossbeam-queue = { version = "0.2.2", features = ["alloc"], default-features = false }
wee_alloc = "0.4.5"

[build-dependencies]
cbindgen = "0.14.2"
