[package]
name = "aspen"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.19", features = ["full"] }
unicode-segmentation = "1.6.0"
peekmore = "0.4.0"
async-trait = "0.1.30"
futures = "0.3.4"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
glob = "0.3.0"
mktemp = "0.4.0"
dirs = "2.0.2"
lazy_static = "1.4.0"
aspen-runtime = { path = "../aspen-runtime" }
